<resources>
    <string name="app_name">Star Raspberry</string>
    <string name="text_main">Mes Arrêts</string>
    <string name="button_slot_1">Modifier</string>
    <string name="text_lignes">Choisissez une ligne</string>
    <string name="refreshButton">Réinitialiser</string>
    <string name="text_directions">Choisissez une direction</string>
    <string name="text_arrets">Choisissez un arrêt</string>
    <string name="text_button_envoyer">Envoyer</string>
    <string name="text_slot2">Votre deuxième requête ici</string>
    <string name="text_slot1">Votre première requête ici</string>
    <string name="text_slot3">Votre troisième requête ici</string>
    <string name="text_button_sup">Supprimer</string>
    <string name="text_ip">IP Réseau:</string>
    <string name="text_port">Port:</string>
    <string name="edit_text_ip">Entrez l\'IP du Réseau</string>
    <string name="edit_text_port">Entrez le Port à Utiliser</string>
    <string name="text_enregistrer">Enregistrer</string>
    <string name="text_selectionner">Selectionner</string>
    <string name="text_parametres">Paramètres</string>
</resources>
