<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_sup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:onClick="sup3"
        android:text="@string/text_button_sup"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_slot3"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_sup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:onClick="sup1"
        android:text="@string/text_button_sup"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_slot1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_send1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:onClick="sendData1"
        android:text="@string/text_button_envoyer"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_slot1"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_slot3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="modifierSlotTrois"
        android:text="@string/button_slot_1"
        app:layout_constraintEnd_toStartOf="@+id/button_send3"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toEndOf="@+id/button_sup3"
        app:layout_constraintTop_toBottomOf="@+id/text_slot3" />

    <TextView
        android:id="@+id/text_slot3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/text_slot3"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_slot2" />

    <Button
        android:id="@+id/button_slot1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="modifierSlotUn"
        android:text="@string/button_slot_1"
        app:layout_constraintEnd_toStartOf="@+id/button_send1"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toEndOf="@+id/button_sup1"
        app:layout_constraintTop_toBottomOf="@+id/text_slot1" />

    <TextView
        android:id="@+id/text_slot2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/text_slot2"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_slot1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_main"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/text_main" />

    <Button
        android:id="@+id/button_slot2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="modifierSlotDeux"
        android:text="@string/button_slot_1"
        app:layout_constraintEnd_toStartOf="@+id/button_send2"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toEndOf="@+id/button_sup2"
        app:layout_constraintTop_toBottomOf="@+id/text_slot2" />

    <TextView
        android:id="@+id/text_slot1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/text_slot1"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_send2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:onClick="sendData2"
        android:text="@string/text_button_envoyer"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_slot2"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_sup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:onClick="sup2"
        android:text="@string/text_button_sup"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_slot2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_send3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:onClick="sendData3"
        android:text="@string/text_button_envoyer"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_slot3"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/bus_back"
        android:onClick="parametres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit"
        android:contentDescription="@string/text_parametres" />

</android.support.constraint.ConstraintLayout>